<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.tfzzh</groupId>
	<artifactId>base</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<name>tfzzh_base</name>
	<description>基础maven部分</description>
	<packaging>pom</packaging>

	<properties>
		<argLine>-Dfile.encoding=UTF-8</argLine>
		<jdk.version>21</jdk.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<servlet.version>3.1.0</servlet.version>
		<servlet.jsp.version>2.3.1</servlet.jsp.version>
		<tomcat.version>9.0.80</tomcat.version>
		<apache.commons.version>1.5</apache.commons.version><!-- 2024-02-07 -->
		<apache.codec.version>1.16.0</apache.codec.version><!-- 2024-02-07 -->
		<!-- <fastjson.version>1.2.83</fastjson.version> --><!--2022-10-15 -->
		<fastjson2.version>2.0.50</fastjson2.version><!--2024-05-27 -->
		<dtdparser.version>1.21</dtdparser.version>
		<log4j2.version>2.22.1</log4j2.version><!-- 2024-02-07 -->
		<!-- <slf4j.version>1.7.36</slf4j.version> --><!--2022-10-15 -->
		<slf4j.version>2.0.12</slf4j.version><!-- 2024-02-07 -->
		<mysql-connector.version>8.3.0</mysql-connector.version><!--2024-02-07 -->
		<!-- <mongodb.version>3.12.11</mongodb.version> --><!--2022-10-15 -->
		<mongodb.version>3.12.14</mongodb.version><!--2024-02-07 -->
		<!-- <mongodb.version>4.11.1</mongodb.version> --><!--2024-02-07 -->
		<!-- <netty.version>4.1.82.Final</netty.version> --><!--2022-10-15 -->
		<netty.version>4.1.106.Final</netty.version><!-- 2024-02-07 -->
		<!-- 项目自身版本 -->
		<project.version>0.0.1-SNAPSHOT</project.version>
	</properties>

	<repositories>
		<repository>
			<id>central</id>
			<url>https://maven.aliyun.com/repository/public</url>
		</repository>
	</repositories>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<!-- <version>3.8.1</version> -->
				<version>3.12.1</version><!-- 2024-02-07 -->
				<configuration>
					<source>${jdk.version}</source>
					<target>${jdk.version}</target>
					<encoding>${project.build.sourceEncoding}</encoding>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<!-- <version>3.0.0</version> -->
				<version>3.3.0</version><!-- 2024-02-07 -->
				<configuration>
					<archive>
						<addMavenDescriptor>false</addMavenDescriptor>
					</archive>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<!-- <version>3.2.1</version> -->
				<version>3.3.0</version><!-- 2024-02-07 -->
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<!-- <version>3.1.0</version> -->
				<version>3.3.1</version><!-- 2024-02-07 -->
				<configuration>
					<encoding>${project.build.sourceEncoding}</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<!-- <version>2.22.2</version> -->
				<version>3.2.5</version><!-- 2024-02-07 -->
				<configuration>
					<forkMode>once</forkMode>
					<argLine>${argLine}</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<modules>
		<module>core</module>
		<module>dao</module>
		<module>socket</module>
		<module>web</module>
	</modules>
	<!--项目的问题管理系统(Bugzilla, Jira, Scarab,或任何你喜欢的问题管理系统)的名称和URL，本例为 jira -->
	<!-- <issueManagement> -->
	<!--问题管理系统（例如jira）的名字， -->
	<!-- <system>jira</system> -->
	<!--该项目使用的问题管理系统的URL -->
	<!-- <url>http://jira.baidu.com/banseon</url> -->
	<!-- </issueManagement> -->
	<!-- <distributionManagement> <repository> <id>nexus-releases</id> <name>Nexus 
		Release Repository</name> <url>http://127.0.0.1:8080/nexus/content/repositories/releases/</url> 
		</repository> <snapshotRepository> <id>nexus-snapshots</id> <name>Nexus Snapshot 
		Repository</name> <url>http://127.0.0.1:8080/nexus/content/repositories/snapshots/</url> 
		</snapshotRepository> </distributionManagement> -->
	<!-- <distributionManagement>
		<repository>
			<id>rdc-releases</id>
			<url>https://repo.rdc.aliyun.com/repository/134985-release-5BE6C2/</url>
		</repository>
		<snapshotRepository>
			<id>rdc-snapshots</id>
			<url>https://repo.rdc.aliyun.com/repository/134985-snapshot-wqpVCQ/</url>
		</snapshotRepository>
	</distributionManagement> -->
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>javax.servlet</groupId>
				<artifactId>javax.servlet-api</artifactId>
				<version>${servlet.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>javax.servlet.jsp</groupId>
				<artifactId>javax.servlet.jsp-api</artifactId>
				<version>${servlet.jsp.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.tomcat</groupId>
				<artifactId>tomcat-catalina</artifactId>
				<version>${tomcat.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.tomcat</groupId>
				<artifactId>tomcat-util</artifactId>
				<version>${tomcat.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>commons-fileupload</groupId>
				<artifactId>commons-fileupload</artifactId>
				<version>${apache.commons.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-codec</groupId>
				<artifactId>commons-codec</artifactId>
				<version>${apache.codec.version}</version>
			</dependency>
			<!-- <dependency>
				<groupId>com.alibaba</groupId>
				<artifactId>fastjson</artifactId>
				<version>${fastjson.version}</version>
			</dependency> -->
			<dependency>
				<groupId>com.alibaba.fastjson2</groupId>
				<artifactId>fastjson2</artifactId>
				<version>${fastjson2.version}</version>
			</dependency>
			<dependency>
				<groupId>dtdparser</groupId>
				<artifactId>dtdparser</artifactId>
				<version>${dtdparser.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-core</artifactId>
				<version>${log4j2.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-api</artifactId>
				<version>${log4j2.version}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
				<!-- <groupId>mysql</groupId> -->
				<!-- <artifactId>mysql-connector-java</artifactId> -->
				<groupId>com.mysql</groupId>
				<artifactId>mysql-connector-j</artifactId>
				<version>${mysql-connector.version}</version>
			</dependency>
			<dependency>
				<groupId>org.mongodb</groupId>
				<artifactId>mongodb-driver-core</artifactId>
				<version>${mongodb.version}</version>
			</dependency>
			<dependency>
				<groupId>org.mongodb</groupId>
				<artifactId>mongo-java-driver</artifactId>
				<!-- <groupId>org.mongodb</groupId> -->
				<!-- <artifactId>mongodb-driver-sync</artifactId> -->
				<version>${mongodb.version}</version>
			</dependency>
			<dependency>
				<groupId>io.netty</groupId>
				<artifactId>netty-all</artifactId>
				<version>${netty.version}</version> 
			</dependency>
		</dependencies>
	</dependencyManagement>
	
</project>